--- a/Miyu/Supporting Files/Info.plist
+++ b/Miyu/Supporting Files/Info.plist
@@ -25,7 +25,7 @@
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
-	<string>HomepageViewController</string>
+	<string>LoginViewController</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
