--- a/Miyu/Supporting Files/Info.plist
+++ b/Miyu/Supporting Files/Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>MIYU needs access to your microphone</string>
+	<key>NSCameraUsageDescription</key>
+	<string>MIYU needs access to your camera</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>MIYU needs access to your photo library</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
